Fix viewport height on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 body, html {
   margin: 0;
   padding: 0;
+  height: 100%;
 }
 
 body {
@@ -11,7 +12,7 @@ body {
 }
 
 #root {
-  height: 100vh;
+  height: 100%;
   display: grid;
   place-items: center;
 }
